@startuml Pacotes MVC

View --> Controller
Controller --> Service
Service -> Repository
Repository-> Model

package Model {
    class Cliente
    class Agente
    class Empregador
    class Pedido
    class Automovel
    class Empregador
}

package View {
}

package Controller {
    class ClienteController
    class AgenteController
    class EmpregadorController
    class PedidoController
    class AutomovelController
    class EmpregadorController
}

package Service {
    class ClienteService
    class AgenteService
    class EmpregadorService
    class PedidoService
    class AutomovelService
    class EmpregadorService
}

package Repository {
    class ClienteRepository
    class AgenteRepository
    class EmpregadorRepository
    class PedidoRepository
    class AutomovelRepository
    class EmpregadorRepository
}

@enduml
